--- a/.ebextensions/environment.config
+++ b/.ebextensions/environment.config
@@ -1,12 +1,12 @@
 option_settings:
   aws:elasticbeanstalk:application:environment:
     NODE_ENV: production
-    APP_PORT = 8080
-    CLIENT_URL = "http://localhost:3000"
-    DB_HOST = "awseb-e-cpqfezscgc-stack-awsebrdsdatabase-xbboz0ddpmvj.cteo4e0ei910.ap-southeast-1.rds.amazonaws.com"
-    DB_PORT = 3306
-    DB_USER = "admin"
-    DB_PWD = "admin24!"
-    DB_NAME = "learning_dev"
-    APP_SECRET = "013720de-bd04-40b2-9a8c-ca625c831265"
-    TOKEN_EXPIRES_IN = "30d"
+    APP_PORT: 8080
+    CLIENT_URL: "http://localhost:3000"
+    DB_HOST: "awseb-e-cpqfezscgc-stack-awsebrdsdatabase-xbboz0ddpmvj.cteo4e0ei910.ap-southeast-1.rds.amazonaws.com"
+    DB_PORT: 3306
+    DB_USER: "admin"
+    DB_PWD: "admin24!"
+    DB_NAME: "learning_dev"
+    APP_SECRET: "013720de-bd04-40b2-9a8c-ca625c831265"
+    TOKEN_EXPIRES_IN: "30d"
