--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,4 @@ public/uploads/*
 
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
-!.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml
+.ebextensions/*
